--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -75,12 +75,18 @@ $font: 'Montserrat', sans-serif;
             color: $focus-color;
             border-top: none;
             border-bottom: none;
+            text-align: start;
           }
 
           .tl-content {
             transform: translate3d(0, 0, 0) translateX(0);
             text-align: start;
             font-size: 1.25em;
+
+            p {
+              margin-left: 0;
+              text-align: start;
+            }
 
             .project-icons {
               display: flex;
